--- a/client/src/components/infoPage/InfoPage.scss
+++ b/client/src/components/infoPage/InfoPage.scss
@@ -1,7 +1,4 @@
 .info {
-  height: 40vh;
-  // background-color: red;
-
   input[type='number'],
   input[type='text'] {
     display: block;
@@ -21,4 +18,16 @@
       padding: 0.25rem;
     }
   }
+}
+
+@media screen and (max-width: 700px) {
+  // .info {
+  //   input[type='number'],
+  //   input[type='text'] {
+  //     width: 270px;
+  //   }
+  //   button {
+  //     width: 270px;
+  //   }
+  // }
 }
