--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -29,6 +29,15 @@
   }
 }
 
+.avatar {
+  & img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .header {
     width: 100%;
